--- a/src/components/tile.module.css
+++ b/src/components/tile.module.css
@@ -237,6 +237,7 @@ h3 {
 
 @media (min-width: 800px) {
   .button {
+    width: 80%;
     border: 2px solid black;
   }
 }
